2018-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix memory leak of profiles
	'name' when claimed length is zero.  Fixes oss-fuzz 11710
	"graphicsmagick/coder_MIFF_fuzzer: Direct-leak in AllocateString".
	and oss-fuzz 11688 "graphicsmagick/coder_MIFF_fuzzer:
	Out-of-memory in graphicsmagick_coder_MIFF_fuzzer". (Credit to
	OSS-Fuzz)

2018-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Apply patch from Alex Gaynor to add
	Zstd to the oss-fuzz build.

2018-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (DcrawExtraOptions): For QuantumDepth > 8 pass -6
	option to dcraw.  Fixes SourceForge issue #568 "dcraw not
	returning 16 bit image even though quantum depth is set to 16".

	* fuzzing/oss-fuzz-build.sh (PKG_CONFIG_PATH): Build WebP prior to
	libtiff so that libtiff has a chance to find it.

2018-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (TimeImageCommand): Time command now shows 6
	digits of elapsed time indication since this precision is often
	now available and it is useful to see.

2018-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Drawable.h: Fix use of clang diagnostic
	syntax. Addresses SourceForge bug #579 "'diagnostic pop' pragma
	without 'diagnostic push' in Drawable.h.".

2018-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (WriteImage): Eliminate use of just-freed
	memory in clone_info->magick when throwing exception due to no
	support for format.  Fixes SourceForge issue #576 "heap
	use-after-freee when convert one format into another format".

	* magick/command.c (BenchmarkImageCommand): Benchmark command now
	shows 6 digits of elapsed time indication since this precision is
	often now available and it is useful to see.

2018-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wand_api.h ("C"): magick/api.h should be included prior to