@@ -38,6 +38,10 @@
 <p>2018-12-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xpm.c (WriteXPMImage): Assure that added colormap entry
+for transparent XPM is initialized. Fixes oss-fuzz 11617
+&quot;graphicsmagick/coder_XPM_fuzzer: Use-of-uninitialized-value in
+QueryColorname&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/miff.c (ReadMIFFImage): Fix memory leak of profiles
 'name' when claimed length is zero.  Fixes oss-fuzz 11710
 &quot;graphicsmagick/coder_MIFF_fuzzer: Direct-leak in AllocateString&quot;.
